# PlaneGCS

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_SUMMARY.md  animation_commands.txt  error_log.txt  generated_animation_keyframes.txt  keyframes_template.json  llm_response.txt  llm_round_1_20251215_004003.txt  llm_round_1_20251215_010712.txt  llm_round_1_20251215_012855.txt  llm_round_1_20251215_094838.txt  llm_round_1_20251215_100345.txt  llm_round_1_20251215_105853.txt  llm_round_1_20251223_114530.txt  llm_round_1_20251223_120832.txt  llm_round_1_20251231_134206.txt  llm_round_2_20251215_004015.txt  llm_round_2_20251215_010732.txt  llm_round_2_20251215_012905.txt  llm_round_2_20251215_094845.txt  llm_round_2_20251215_100431.txt  llm_round_2_20251215_105858.txt  llm_round_2_20251223_114536.txt  llm_round_2_20251223_120837.txt  llm_round_2_20251231_134211.txt  llm_round_3_20251215_004022.txt  llm_round_3_20251215_010747.txt  llm_round_3_20251215_012915.txt  llm_round_3_20251215_094852.txt  llm_round_3_20251215_100458.txt  llm_round_3_20251215_105925.txt  llm_round_3_20251223_114544.txt  llm_round_3_20251223_120845.txt  llm_round_3_20251231_134221.txt  llm_round_4_20251215_004029.txt  llm_round_4_20251215_010756.txt  llm_round_4_20251215_012928.txt  (+25 more)
aichater/: AIChater.cpp  AIChater.h  CMakeLists.txt
docs/: KEYFRAME_GENERATION.md  anim_commands.md  key_ideas.md  llm_geo_anim.md
examples/: README.md  build_llm_anim.bat  ex1_point_movement.cpp  ex2_circle_scaling.cpp  ex3_circular_motion.cpp  ex4_concurrent_animations.cpp  ex5_sequential_animations.cpp  ex6_complex_animation.cpp  generated_animation_keyframes.txt  llm_geometry_animation.cpp  llm_geometry_animation.h  llm_geometry_animation_temp.h  math_animation_demo.cpp  solution_to_keyframes_README.md  solution_to_keyframes_core.cpp  solution_to_keyframes_core.h  solution_to_keyframes_demo.cpp  test_coordinator.cpp  test_detector.cpp  test_edge_cases.cpp  test_keyframe_generation.cpp  test_keyframe_generator.cpp
models_for_test/: IterationState.cpp  IterationState.h
openspec/: project.md
openspec/changes/add-keyframe-generation/: design.md  proposal.md  tasks.md
openspec/changes/add-keyframe-generation/specs/keyframe-generation/: spec.md
src/: AnimationCommand.cpp  AnimationCommand.h  AnimationCommandCoordinator.cpp  AnimationCommandCoordinator.h  GeometryAnimationBridge.cpp  GeometryAnimationBridge.h  KeyframeGenerator.cpp  KeyframeGenerator.h
